--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,9 +1,13 @@
 .navbar{
-    padding: 20px 10px;
+    padding: 30px 10px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    font-size: larger;
 }
 
 .navbar a{
     text-decoration: none;
+    color: black;
 }
 
 .navbar img{
@@ -15,7 +19,7 @@
 }
 
 .navbar-nav{
-    padding: 10px;
+    padding: 20px 30px;
 }
 
 .show,
