--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 body {
   font-family: 'Work Sans', serif;
   font-weight: 300;
+  overflow-x: hidden;
  }
  
  h1, h2, h3, h4, h5, h6 {
@@ -15,4 +16,15 @@ body {
   font-family: 'Work Sans', serif;
  }
 
+
+.app{
+  height: 100vh;
+
+  .sections{
+    width: 100%;
+    height: calc(100vh - 70px);
+    position: relative;
+    top: 70px;
+  }
+}
 
