--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -1,5 +1,5 @@
 .topbar{
-    background-color:rgb(255, 255, 255);
+    background-color: none;
     color: blue;
     width: 100%;
     height: 70px;
