--- a/src/components/layout/home/Home.scss
+++ b/src/components/layout/home/Home.scss
@@ -1,12 +1,20 @@
 @import '../../../global.scss';
 
 .header_div{
-    background: linear-gradient( 180deg, rgb(247, 247, 232),rgb(248, 248, 236));
+    background: linear-gradient( 180deg, rgb(248, 253, 253),rgb(167, 243, 214));
+    margin: 3rem 0rem;
+    border-radius: 0rem;
     padding-top: 9rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+
+    @media screen and (max-width: 640px){
+        margin: 1rem 0rem;
+        border-radius: 0rem;
+
+    }
 
     .header_text{
         display: flex;
