--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -1,14 +1,94 @@
 .topbar{
-    background-color: none;
-    color: blue;
+    background: none;
+    color: rgb(0, 0, 0);
     width: 100%;
-    height: 70px;
     top: 0;
     position: fixed;
-    z-index: 2;
+    z-index: 100;
+    transition: all 1s ease;
+    padding: 10px 0px;
 
-    .navbar-light .navbar-toggler{
-        border: none;
+    .wrapper{
+        padding: 10px 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .left{
+           img{
+               width: 150px;
+           }   
+        }
+
+        .right{
+
+            .hambackground{
+                padding: 20px;
+                border-radius: 35px;
+                background: linear-gradient(145deg, #e6e6e6, #ffffff);
+                box-shadow:  6px 6px 12px #cccccc,
+                            -2px -2px 12px #ffffff82;
+                transition: all 0.5s ease;
+
+
+                .hamburger{
+                    width: 32px;
+                    height: 25px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    cursor: pointer;
+                    padding: 0px;
+    
+                    span{
+                        width: 100%;
+                        height: 3px;
+                        background-color: rgb(38, 38, 38);
+                        box-shadow:  0px 2px 5px #636363c9;
+                        transform-origin: left;
+                        transition: all 0.5s ease;
+                    }
+                }
+
+                @media screen and (max-width: 640px){
+                    padding: 15px;
+                }
+
+            }
+
+            
+            
+
+        }
+    }
+
+    &.active{
+        background: none !important;
+        backdrop-filter: blur(0px);
+        color: rgb(0, 0, 0);
+
+        .hambackground{
+            background: none !important;
+            box-shadow: none !important;
+          
+            .hamburger{
+                span{
+                    &:first-child{
+                        transform: rotate(45deg);
+                    }
+                    &:nth-child(2){
+                        opacity: 0;
+                    }
+                    &:last-child{
+                        transform: rotate(-45deg);
+                    }
+                }
+            }
+
+
+
+        }
+        
     }
 
 }
