--- a/src/components/layout/home/Home.scss
+++ b/src/components/layout/home/Home.scss
@@ -1,7 +1,7 @@
 @import '../../../global.scss';
 
 .header_div{
-    background: linear-gradient( 180deg, rgb(248, 253, 253),rgb(167, 243, 214));
+    background: linear-gradient( 180deg, rgb(252, 252, 252), $color-2);
     margin: 3rem 0rem;
     border-radius: 0rem;
     padding-top: 9rem;
@@ -9,10 +9,11 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    border-radius: 5rem;
 
     @media screen and (max-width: 640px){
         margin: 1rem 0rem;
-        border-radius: 0rem;
+        border-radius: 1.5rem;
 
     }
 
@@ -26,10 +27,11 @@
             h1{
                 font-size: $desktop_h1_font;
                 font-weight: 700;
+                color: $color-5;
             }
 
             h2{
-                color: $red_text;
+                color: $color-1;
                 font-size: $dekstop_h2_font;
             }
         }
@@ -49,7 +51,7 @@
                 text-decoration: none;
                 outline: none;
                 border: none;
-                background: linear-gradient(50deg, rgb(78, 167, 152), rgb(68, 192, 155));
+                background: linear-gradient(50deg, $color-4, $color-4);
                 border-radius: 50px;
                 font-weight: 500;
                 transition: all .1s ease-in-out;
@@ -63,6 +65,11 @@
                     transform: translateY(0%);
                     box-shadow: inset -2px -2px 3px rgb(248, 247, 247),
                                 inset 2px 2px 7px rgba(0, 0, 0, 0.233);
+                }
+
+                @media screen and (max-width: 640px){
+                    width: 100%;
+            
                 }
             }
         }
@@ -126,9 +133,6 @@
                 display: flex;
                 justify-content: center;
 
-                button{
-                    width: 90%;
-                }
             }
     
         }
