--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -1,3 +1,5 @@
+@import '../../../global.scss';
+
 .topbar{
     background: none;
     color: rgb(0, 0, 0);
@@ -6,17 +8,40 @@
     position: fixed;
     z-index: 100;
     transition: all 1s ease;
-    padding: 10px 0px;
 
     .wrapper{
-        padding: 10px 30px;
+        padding: 5px 30px;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
         .left{
+            a{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                text-decoration: none;
+                
+
+                h4{
+                    letter-spacing: 3px;
+                    color: black;
+                    opacity: 75%;
+                    margin: 0px 10px;
+                }
+
+                @media screen and (max-width: 640px){
+                    h4{
+                        font-size: 0rem;
+                    }
+                    
+                }
+            }
+            
+        
            img{
-               width: 150px;
+               width: 70px;
            }   
         }
 
@@ -43,7 +68,7 @@
                     span{
                         width: 100%;
                         height: 3px;
-                        background-color: rgb(38, 38, 38);
+                        background-color: $color-5;
                         box-shadow:  0px 2px 5px #636363c9;
                         transform-origin: left;
                         transition: all 0.5s ease;
@@ -64,7 +89,6 @@
 
     &.active{
         background: none !important;
-        backdrop-filter: blur(0px);
         color: rgb(0, 0, 0);
 
         .hambackground{
