--- a/src/global.scss
+++ b/src/global.scss
@@ -16,8 +16,8 @@ $phone_p_font: 0.9rem;
 $red_text: rgb(216, 14, 14);
 
 
-$color-1: #e1bbab;
+$color-1: rgb(186, 148, 77);
 $color-2: #EEE2DC;
 $color-3: #BAB2B5;
 $color-4: #30659e;
-$color-5: #872d4b;
+$color-5: #68273d;
