--- a/src/components/layout/home/portfolio/Portfolio.scss
+++ b/src/components/layout/home/portfolio/Portfolio.scss
@@ -1,5 +1,55 @@
 @import '../../../../global.scss';
 
+//Portfolio Div CSS:
+.portfolio_div{
+    margin: 5rem 2rem;
+
+    @media screen and (max-width: 640px){
+        margin: 5rem 1.2rem;
+    }
+
+    .portfolio_title{
+        margin: 2rem 0rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        hr{
+            margin: 0px 20px;
+
+            @media screen and (max-width: 640px){
+                margin: 0px 10px;
+            }
+        }
+        
+        h3{
+            font-weight: 700;
+            letter-spacing: 3px;
+            opacity: 0.75;
+            
+        }
+    }
+
+    .title{
+        color: $color-1;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        margin: 2rem 0rem;
+    
+        h5{
+            display: flex;
+            flex-direction: row;
+            
+            svg{
+                margin: 0px 10px;
+            }
+        }
+    
+    }
+}
+
+
 //Default webdev_project template:
 .webdev_project{
     width: 85rem;
@@ -155,154 +205,167 @@
 }
 
 
-//Portfolio Div CSS:
-.portfolio_div{
-    margin: 5rem 2rem;
+
+//Webdev Portfolio section:
+.portfolio_webdev{
+    margin: 5rem 0rem;
+    
+    .webdev_portfolios{
+        display: flex;
+        flex-direction: column;
+        padding: 0 5vw;
+
+        @media screen and (max-width: 640px){
+            padding: 0;
+        }
+        
+
+        .webdev_1{
+            margin: 2rem;
+            display: flex;
+            justify-content: flex-start;
+
+            @media screen and (max-width: 640px){
+                margin: 1rem 0rem;
+                justify-content: center;
+            }
+
+            .webdev_project{
+                background: linear-gradient( rgb(250, 247, 247),rgb(237, 241, 243));
+
+                @media screen and (max-width: 640px){
+                    flex-wrap: wrap-reverse;
+                    width: 100%;
+                }
+
+            }
+        }
+
+        .webdev_2{
+            margin: 2rem;
+            display: flex;
+            justify-content: flex-end;
+
+            @media screen and (max-width: 640px){
+                margin: 1rem 0rem;
+                justify-content: center;
+            }
+
+            .webdev_project{
+                background: linear-gradient( rgb(250, 247, 247),rgb(245, 227, 227));
+                
+                @media screen and (max-width: 640px){
+                    flex-wrap: wrap;
+                    width: 100%;
+                }
+            }
+        }
+
+        .webdev_3{
+            margin: 2rem;
+            display: flex;
+            justify-content: flex-start;
+
+            @media screen and (max-width: 640px){
+                margin: 1rem 0rem;
+                justify-content: center;
+            }
+
+            .webdev_project{
+                background: linear-gradient( rgb(250, 247, 247),rgb(234, 242, 234));
+                
+                @media screen and (max-width: 640px){
+                    flex-wrap: wrap-reverse;
+                    width: 100%;
+                }
+            }
+        }
+
+        .more_work{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 35px;
+
+            button{
+                border: 1px solid rgba(0, 0, 0, 0.433);
+                color: $color-4;
+                background: none;
+                padding: 10px 20px;
+                border-radius: 10px;
+                font-weight: 500;
+                transition: all .1s ease;
+
+                &:hover{
+                    background-color: $color-4;
+                    color: rgb(255, 255, 255);
+                }
+
+                @media screen and (max-width: 640px){
+                    width: 100%;
+                }
+            }
+        }
+
+    }
+}
+
+
+//Default engine_project template:
+.engine_project{
+    display: flex;
+    flex-direction: column;
+    width: 32rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
+    border-radius: 20px;
 
     @media screen and (max-width: 640px){
-        margin: 5rem 1.2rem;
+        width: 100%;
+    }
+    
+
+    .project_img{
+        height: 20rem;
+        background-color: red;
+        border-top-right-radius: 20px;
+        border-top-left-radius: 20px;
     }
 
-    .portfolio_title{
-        margin: 2rem 0rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        hr{
-            margin: 0px 20px;
-
-            @media screen and (max-width: 640px){
-                margin: 0px 10px;
-            }
-        }
-        
-        h3{
-            font-weight: 700;
-            letter-spacing: 3px;
-            opacity: 0.75;
-            
-        }
-    }
-
-    .portfolio_webdev{
-        margin: 5rem 0rem;
-        
-        .webdev_portfolios{
-            display: flex;
-            flex-direction: column;
-            padding: 0 5vw;
-
-            @media screen and (max-width: 640px){
-                padding: 0;
-            }
-            
-
-            .webdev_1{
-                margin: 2rem;
-                display: flex;
-                justify-content: flex-start;
-
-                @media screen and (max-width: 640px){
-                    margin: 1rem 0rem;
-                    justify-content: center;
-                }
-
-                .webdev_project{
-                    background: linear-gradient( rgb(250, 247, 247),rgb(237, 241, 243));
-
-                    @media screen and (max-width: 640px){
-                        flex-wrap: wrap-reverse;
-                        width: 100%;
-                    }
-
-                }
-            }
-
-            .webdev_2{
-                margin: 2rem;
-                display: flex;
-                justify-content: flex-end;
-
-                @media screen and (max-width: 640px){
-                    margin: 1rem 0rem;
-                    justify-content: center;
-                }
-
-                .webdev_project{
-                    background: linear-gradient( rgb(250, 247, 247),rgb(245, 227, 227));
-                    
-                    @media screen and (max-width: 640px){
-                        flex-wrap: wrap;
-                        width: 100%;
-                    }
-                }
-            }
-
-            .webdev_3{
-                margin: 2rem;
-                display: flex;
-                justify-content: flex-start;
-
-                @media screen and (max-width: 640px){
-                    margin: 1rem 0rem;
-                    justify-content: center;
-                }
-
-                .webdev_project{
-                    background: linear-gradient( rgb(250, 247, 247),rgb(234, 242, 234));
-                    
-                    @media screen and (max-width: 640px){
-                        flex-wrap: wrap-reverse;
-                        width: 100%;
-                    }
-                }
-            }
-
-            .more_work{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 35px;
-
-                button{
-                    border: 1px solid rgba(0, 0, 0, 0.433);
-                    color: rgb(255, 255, 255);
-                    background: $color-4;
-                    padding: 10px 20px;
-                    border-radius: 10px;
-                    font-weight: 500;
-                    transition: all .1s ease;
-
-                    &:hover{
-                        background-color: rgb(255, 255, 255);
-                        color: rgb(0, 0, 0);
-                    }
-
-                    @media screen and (max-width: 640px){
-                        width: 100%;
-                    }
-                }
-            }
-
-        }
+    .project_des{
+        height: 20rem;
+        background-color: rgb(255, 255, 255);
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
     }
 }
 
-.title{
-    color: $color-1;
-    text-align: center;
+
+.engine_portfolios{
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+    
 
-    h5{
-        display: flex;
-        flex-direction: row;
-        
-        svg{
-            margin: 0px 10px;
-        }
+    @media screen and (max-width: 640px){
+        flex-wrap: wrap;
+        width: 100%;
     }
 
+    .engine_1{
+        margin: 0px 0rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+        @media screen and (max-width: 640px){
+            margin: 1rem 0rem;
+        }
+    }
 }
+
+
 
