--- a/src/components/layout/home/portfolio/Portfolio.scss
+++ b/src/components/layout/home/portfolio/Portfolio.scss
@@ -76,6 +76,7 @@
             h5{
                 font-weight: 900;
                 color: $color-1;
+                font-size: 1.1rem;
 
                 @media screen and (max-width: 640px){
                     font-size: 0.9rem;
@@ -333,10 +334,116 @@
     }
 
     .project_des{
-        height: 20rem;
+        height: 25rem;
         background-color: rgb(255, 255, 255);
         border-bottom-right-radius: 20px;
         border-bottom-left-radius: 20px;
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+
+        h5{
+            font-weight: 900;
+            color: $color-1;
+            font-size: 1.1rem;
+
+            @media screen and (max-width: 640px){
+                font-size: 0.9rem;
+            }
+        }
+
+        h2{
+            font-weight: 700;
+            margin: 1rem 0rem;
+            color: $color-5;
+            font-size: 1.5rem;
+
+            @media screen and (max-width: 640px){
+                font-size: 1.3rem;
+                margin: 0.5rem 0rem;
+            }
+        }
+
+        p{
+            margin: 1rem 0rem;
+
+            @media screen and (max-width: 640px){
+                font-size: 0.8rem;
+                margin: 0.5rem 0rem;
+            }
+        }
+
+        .project_tags{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin: 1rem 0rem;
+
+            @media screen and (max-width: 640px){
+                margin: 0.5rem 0rem;
+            }
+
+            p{
+                margin: 3px;
+                padding: 5px 10px;
+                background:rgb(94, 206, 94);
+                border: 0.5px solid rgba(0, 0, 0, 0.426);
+                border-radius: 50px;
+                color: white;
+                font-size: 0.9rem;
+
+                @media screen and (max-width: 640px){
+                    font-size: 0.8rem;
+                }
+                
+            }
+        }
+
+        .project_buttons{
+            margin: 1rem 0rem;
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+            
+            button{
+                margin-right: 1rem;
+                margin-bottom: 1rem;
+                color: rgb(255, 255, 255);
+                padding: 15px 50px;
+                font-size: 1rem;
+                text-decoration: none;
+                outline: none;
+                border: none;
+                font-weight: 500;
+                transition: all .1s ease-in-out;
+
+                
+            }
+
+            .more_button{
+                background: linear-gradient(50deg, rgb(168, 131, 117), rgb(153, 115, 101));
+                border-radius: 50px;
+
+                &:hover{
+                    transform: translateY(-5%);
+                    box-shadow: 0 5px 10px rgba(41, 41, 41, 0.26);
+                }
+
+                &:active{
+                    transform: translateY(0%);
+                    box-shadow: inset -2px -2px 3px rgb(248, 247, 247),
+                                inset 2px 2px 7px rgba(0, 0, 0, 0.233);
+                }
+                
+                @media screen and (max-width: 640px){
+                    width: 100%;
+                }
+            }
+        }
+
+        
     }
 }
 
