Added hover action on Engineering projects

--- a/src/components/layout/home/portfolio/Portfolio.scss
+++ b/src/components/layout/home/portfolio/Portfolio.scss
@@ -329,9 +329,58 @@
     margin-bottom: 1rem;
     box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
     border-radius: 20px;
+    transition:all 0.5s ease-in-out;
+    cursor: pointer;
 
     @media screen and (max-width: 640px){
         width: 100%;
+    }
+
+    &:hover{
+        box-shadow: 0 7px 20px rgba(38, 38, 38, 0.501);
+        
+        .project_img{
+            background-size: 40rem;
+        }
+        
+        .project_des{
+            background: rgb(250, 171, 25);
+
+            h5{
+                color: $color-2;
+            }
+
+            h2{
+                color: white;
+            }
+
+            p{
+                color: white;
+            }
+
+            .project_tags{
+                p{
+                    color: black;
+                    background: white;
+                    border: 1px solid rgba(0, 0, 0, 0.433);
+                }
+            }
+
+            .more_button{
+                transform: translateY(-5%);
+                box-shadow: 0 5px 10px rgba(41, 41, 41, 0.26);
+            }
+            
+        }
+    }
+
+    &:active{
+        .more_button{
+            transform: translateY(0%);
+            box-shadow: inset -2px -2px 3px rgb(248, 247, 247),
+                        inset 2px 2px 7px rgba(0, 0, 0, 0.233);
+        }
+        
     }
     
 
@@ -346,13 +395,16 @@
         justify-content: center;
         background-image: url('../../../../assets/engine2.png');
         background-position: center ;
-        background-size: cover;
+        background-size: 35rem;
+        background-repeat: no-repeat;
+        transition:all 0.5s ease-in-out;
+        
 
     }
 
     .project_des{
         height: 25rem;
-        background-color: rgb(255, 255, 255);
+        background: rgb(255, 255, 255);
         border-bottom-right-radius: 20px;
         border-bottom-left-radius: 20px;
         padding: 1.5rem;
@@ -360,6 +412,7 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: flex-start;
+        transition: all 0.5s ease-in-out;
 
         h5{
             font-weight: 900;
@@ -440,7 +493,7 @@
             }
 
             .more_button{
-                background: linear-gradient(50deg, rgb(168, 131, 117), rgb(153, 115, 101));
+                background: linear-gradient(50deg, rgb(181, 152, 141), rgb(160, 135, 125));
                 border-radius: 50px;
 
                 &:hover{
