--- a/src/components/layout/home/Contact.scss
+++ b/src/components/layout/home/Contact.scss
@@ -1,5 +1,37 @@
 @import '../../../global.scss';
 
+.contact_div{
+    margin: 5rem 0rem;
+
+    @media screen and (max-width: 640px){
+        margin: 5rem 0rem;
+    }
+
+    .contact_title{
+        margin: 2rem 0rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        hr{
+            margin: 0px 20px;
+
+            @media screen and (max-width: 640px){
+                margin: 0px 10px;
+            }
+        }
+        
+        h3{
+            font-weight: 700;
+            letter-spacing: 3px;
+            opacity: 0.55;
+            
+        }
+    }
+
+}
+
+
 .contact_info{
     display: flex;
     flex-direction: column;
@@ -18,12 +50,16 @@
     }
 
     h3{
-        letter-spacing: 5px;
+        letter-spacing: 2px;
         opacity: 90%;
 
         @media screen and (max-width: 640px){
             letter-spacing: 0.5px;
             font-size: larger;
         }
+    }
+
+    h5{
+        color:rgba(90, 90, 90, 0.891)
     }
 }
