Made website responsive

--- a/src/components/layout/home/portfolio/Engineering.scss
+++ b/src/components/layout/home/portfolio/Engineering.scss
@@ -250,7 +250,7 @@
         width: 100%;
     }
 
-    .engine_1{
+    .engine{
         margin: 1rem 2rem;
         display: flex;
         align-items: center;
