--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -138,7 +138,7 @@
         }
 
         .project_img{
-            padding: 4rem 1rem;
+            padding: 4rem 0rem;
             display: flex;
             justify-content: center;
             max-width: 40rem;
@@ -152,7 +152,7 @@
                 height: 28rem;
 
                 @media screen and (max-width: 640px){
-                    width: 19rem;
+                    width: 20rem;
                     height: 15rem;
                 }
             }
@@ -271,6 +271,39 @@
 
     }
 }
+
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: none;
+  
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
 
 
