--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -60,10 +60,19 @@
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
-                margin: 1rem 0rem;
+                margin: 2rem 0rem;
+                justify-content: space-between;
 
                 @media screen and (max-width: 640px){
-                    margin: 0.5rem 0rem;
+                    margin: 1.5rem 0rem;
+                    justify-content: space-evenly;
+                }
+
+                img{
+                    width: 5rem;
+                    height: 4rem;
+                    opacity: 65%;
+                    margin: 0.5rem;
                 }
 
                 p{
