--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -34,6 +34,7 @@
                     color: rgba(0, 0, 0, 0.898);
                     opacity: 65%;
                     margin: 0px 10px;
+                    margin-top: 5px;
                 }
 
                 @media screen and (max-width: 640px){
