--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -71,7 +71,7 @@
                 img{
                     width: 5rem;
                     height: 4rem;
-                    opacity: 45%;
+                    opacity: 0.45;
                     margin: 0.5rem;
                 }
 
