--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -7,7 +7,7 @@
     top: 0;
     position: fixed;
     z-index: 100;
-    transition: all 1s ease;
+    transition: all 0.5s ease;
 
     .wrapper{
         padding: 5px 30px;
@@ -32,7 +32,7 @@
                 h4{
                     letter-spacing: 4.5px;
                     color: rgba(0, 0, 0, 0.898);
-                    opacity: 65%;
+                    opacity: 0.65;
                     margin: 0px 10px;
                     margin-top: 5px;
                 }
