--- a/src/components/layout/projects/plant_detection/PlantDetection.scss
+++ b/src/components/layout/projects/plant_detection/PlantDetection.scss
@@ -12,11 +12,18 @@
     @media screen and (max-width: 640px){
         margin: 1rem 0rem;
         border-radius: 2rem;
+        padding: 5rem 1.2rem 3rem 1.2rem;
+
     }
 
     .plant_title{
         h1{
             font-size: 2.5rem;
+
+            @media screen and (max-width: 640px){
+                font-size: 1.8rem;
+        
+            }
         }
     }
 
@@ -45,10 +52,26 @@
     .content_title{
         padding: 0rem 1rem;
         width: 30rem;
+
+        @media screen and (max-width: 640px){
+            padding: 0rem 1rem;
+            width: 100%;
+            font-size: 1.2rem;
+            font-weight: 700;
+        }
     }
 
     .content_points{
         width: 50rem;
+
+        @media screen and (max-width: 640px){
+            padding: 0rem 1rem;
+            width: 100%;
+        }
+    }
+
+    img{
+        margin: 1rem;
     }
 
     .content_1,
@@ -56,25 +79,59 @@
     .content_3,
     .content_5,
     .content_6,
-    .content_7{
+    .content_7,
+    .content_8,
+    .content_10,
+    .content_11,
+    .content_12{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 2rem;
+        margin-top: 3rem;
+    }
+
+    .content_9{
+        display: flex;
+        flex-direction: column;
+        margin-top: 3rem;
     }
 }
 
 .content_2,
-.content_6{
+.content_6,
+.content_9{
     img{
         width: 50rem;
     }
 }
 
+.content_9{
+    img{
+        box-shadow: 0 5px 10px rgba(63, 63, 63, 0.26);
+    }
+}
+
 .content_3,
 .content_5,
-.content_7{
+.content_7,
+.content_8,
+.content_10,
+.content_11{
     img{
         width: 40rem;
+    }
+}
+
+.content_11{
+    img{
+        width: 40rem;
+    }
+}
+
+@media screen and (max-width: 640px){
+    .plant_content{
+        img{
+            width: 20rem;
+        }
     }
 }
