Done with Recycle Robot description page

--- a/src/components/layout/home/portfolio/Engineering.scss
+++ b/src/components/layout/home/portfolio/Engineering.scss
@@ -184,6 +184,8 @@
                 font-size: medium;
                 font-weight: 500;
                 width: 100%;
+                display: flex;
+                justify-content: flex-end;
             }
 
             
