Installed Swiper.js and implemented on web dev images

--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -297,3 +297,12 @@
         animation: none;
     }
 }
+
+
+@media screen and (max-width: 640px){
+    .swiper-container{
+        width: 320px;
+        height: 300px;
+    }
+}
+
